# glad-meson

./: meson.build
include/glad/: glad.h
src/: glad.c
